# namegen

./: .editorconfig  .gitmodules  .rustfmt.toml  Cargo.toml  License.txt  Readme.md  abrahamic.xml  dwarf-m-split.xml  dwarf-m-ssp.xml  dwarf-m.xml  dwarf.xml  elf-f-split.xml  elf-f-ssp.xml  elf-f.xml  elf-m-split.xml  elf-m.xml  elf.xml  goblin-m.xml  goblin.xml  norse-f.txt  norse-m.txt  silly.xml  test.xml
configs/: abrahamic.xml  default.xml  dwarf.xml  elf.xml  gadgetry.xml  goblin.xml  greco-roman.xml  silly.xml  test.xml  thing.xml
docs/: config-capitalize.md  config-join.md  config-literal.md  config-markov.md  config-match.md  config-number.md  config-option.md  config-repeat.md  config-switch.md  config-words.md  config.md
libnamegen/: Cargo.toml
libnamegen/src/: config.rs  generator.rs  lib.rs
libnamegen/src/config/: build_generator.rs  into_generator.rs  parser.rs  write_xml.rs
libnamegen/src/generator/: capitalizer.rs  constraints.rs  joiner.rs  literal.rs  markov.rs  matcher.rs  numberer.rs  optional.rs  repeater.rs  switcher.rs  words.rs
libnamegen/src/generator/markov/: tokenizer.rs
namegen-cli/: Cargo.toml
namegen-cli/src/: main.rs  styles.rs
namegen-webui/: Cargo.toml  Trunk.toml  app.scss  index.html
namegen-webui/src/: accent_colors.rs  constraints.rs  main.rs  names_panel.rs  options_panel.rs  output_panel.rs  toolbar.rs  typo.rs
namegen-webui/src/constraints/: boolean_constraint.rs  number_constraint.rs  text_constraint.rs
namegen-webui/styles/: app.css  fonts.css  theme.css  ui.css
src/: acsii_map.rs  concatter.rs  config.rs  default.xml  generator.rs  main.rs  markov.rs  namegen.rs  styles.rs
src/builtin/: default.xml  thing.xml
src/config/: capitalizer.rs  concatter.rs  into_generator.rs  joiner.rs  literal.rs  markov.rs  matcher.rs  numberer.rs  optional.rs  parser.rs  repeater.rs  switcher.rs  words.rs  write_xml.rs
src/generator/: capitalizer.rs  concatter.rs  joiner.rs  literal.rs  markov.rs  matcher.rs  numberer.rs  optional.rs  parser.rs  repeater.rs  switcher.rs  words.rs
src/generator/markov/: tokenizer.rs
src/namegen/: config.rs
