[workspace]
resolver = "3"
members = ["libnamegen", "namegen-cli"]

[workspace.package]
authors = ["Jonathon Cobb"]
version = "0.1.0"

[workspace.dependencies]
anstream = "1.0.0"
anstyle = "1.0.14"
clap = { version = "4.5.16", features = ["derive"] }
itertools = "0.14.0"
lazy_static = "1.5.0"
rand = "0.10.0"
regex = "1.12.3"
thiserror = "2.0.18"
xml = "1.0.0"
