[workspace]
resolver = "3"
members = ["libnamegen", "namegen-cli", "namegen-webui"]

[workspace.package]
authors = ["Jonathon Cobb"]
version = "0.1.0"

[workspace.dependencies]
anstream = "1.0.0"
anstyle = "1.0.14"
clap = "4.5.16"
getrandom = "0.4.2"
gloo-timers = "0.4.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
leptos = "0.8.19"
rand = "0.10.0"
regex = "1.12.3"
thiserror = "2.0.18"
wasm-bindgen = "0.2.121"
web-sys = "0.3.97"
xml = "1.0.0"
