[package]
name = "namegen-webui"
description = "Random name generator web UI"
edition = "2024"
authors.workspace = true
version.workspace = true

[dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }
gloo-timers.workspace = true
libnamegen = { path = "../libnamegen" }
rand.workspace = true
web-sys = { workspace = true, features = [
    "HtmlInputElement",
    "HtmlSelectElement",
] }
yew = { workspace = true, features = ["csr"] }
yew-hooks.workspace = true
